# djangoProject

./: .env  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
djangoProject/: settings.py  urls.py
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/sql/: get_three_menu.py
menu/static/css/: styles.css
menu/templatetags/: menu_tags.py
templates/: menu.html
