[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Xei201 <xei201@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
